--- a/velo-a/public/css/app.css
+++ b/velo-a/public/css/app.css
@@ -16,7 +16,6 @@ body {
     top: 0;
     bottom: 0;
     width: 80%;
-    z-index: -1;
     right: 0;
 }
 
@@ -24,4 +23,10 @@ body {
     width: 20%;
     background-color: white;
     height: 100%;
+}
+
+.mapboxgl-ctrl-directions{
+    width: 95%!important;
+    min-width: 0!important;
+
 }
