--- a/velo-a/public/css/starterPack.css
+++ b/velo-a/public/css/starterPack.css
@@ -29,6 +29,28 @@ input {
 	min-height: 68px;
 }
 
+.charging > div > p {
+	background: rgb(227,227,227);
+	background: linear-gradient(90deg, rgba(227,227,227,1) 0%, rgba(182,182,182,1) 7%, rgba(182,182,182,1) 13%, rgba(227,227,227,1) 25%);
+	background-size:900%;
+	background-position: 100% 0;
+	animation: anim_text 1.8s;
+	animation-iteration-count: 5;
+	animation-timing-function: ease-in-out;
+}
+
+
+@keyframes anim_text {
+	0% {
+		background-position: 100% 0;
+	}
+	99.99% {
+		background-position: -30% 0;
+	}
+	100% {
+		background-position: 100% 0;
+	}
+}
 
 @media (orientation: portrait) {
 	#div-bicky-habille {
